Fix text alignment on books relevant to new background

--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ body {
   background: url("images/book-cover.jpg");
   background-size: cover;
   border-radius: 0.5rem;
-  padding: 1rem;
+  padding: 1rem 1rem 1rem 2.5rem;
 }
 
 .add-book {
